rust/codec-openalex/tests/snapshots/examples__author-2.snap
---
source: rust/codec-openalex/tests/examples.rs
expression: node
---
{
  "type": "Person",
  "familyNames": [
    "男"
  ],
  "givenNames": [
    "侯",
    "政"
  ],
  "identifiers": [
    "https://openalex.org/A5090478819"
  ],
  "name": "侯政男"
}
