rust/codec-openalex/tests/snapshots/examples__author-3.snap
---
source: rust/codec-openalex/tests/examples.rs
expression: node
---
{
  "type": "Person",
  "familyNames": [
    "敏"
  ],
  "givenNames": [
    "闭",
    "忠"
  ],
  "identifiers": [
    "https://openalex.org/A5074527736"
  ],
  "name": "闭忠敏"
}
