rust/codec-openalex/tests/snapshots/examples__funder-3.snap
---
source: rust/codec-openalex/tests/examples.rs
expression: node
---
{
  "type": "Organization",
  "id": "https://openalex.org/F4320330868",
  "name": "Kerry Group Kuok Foundation",
  "identifiers": [
    "https://openalex.org/F4320330868",
    {
      "type": "PropertyValue",
      "propertyId": "crossref",
      "value": "501100020393"
    },
    "https://doi.org/10.13039/501100020393"
  ]
}
