rust/codec-openalex/tests/snapshots/examples__institution-2.snap
---
source: rust/codec-openalex/tests/examples.rs
expression: node
---
{
  "type": "Organization",
  "id": "https://openalex.org/I4210163069",
  "name": "VUES Brno (Czechia)",
  "ror": "05g59rq62",
  "identifiers": [
    "https://openalex.org/I4210163069",
    "https://ror.org/05g59rq62",
    {
      "type": "PropertyValue",
      "propertyId": "grid",
      "value": "grid.448239.0"
    }
  ],
  "url": "http://www.vues.cz/"
}
