rust/codec-openalex/tests/snapshots/examples__institution-3.snap
---
source: rust/codec-openalex/tests/examples.rs
expression: node
---
{
  "type": "Organization",
  "id": "https://openalex.org/I4210134686",
  "name": "Charles George VA Medical Center",
  "ror": "03vwf8m18",
  "url": "https://www.asheville.va.gov/"
}
