rust/codec-openalex/tests/snapshots/examples__publisher-1.snap
---
source: rust/codec-openalex/tests/examples.rs
expression: node
---
{
  "type": "Organization",
  "id": "https://openalex.org/P4310322363",
  "name": "Academy of Medical Sciences of Bosnia and Herzegovina",
  "ror": "01vbw1f94",
  "identifiers": [
    "https://openalex.org/P4310322363",
    "https://ror.org/01vbw1f94",
    "https://www.wikidata.org/entity/Q63859238"
  ],
  "url": "https://amn.ba"
}
